<resources>
    <string name="app_name">FlashCards</string>
    <string name="title_list">List</string>
    <string name="title_camera">Camera</string>
    <string name="title_profile">Profile</string>
    <string name="set_title_text">Set title</string>
    <string name="language_input_text">Language input</string>
    <string name="language_output_text">Language output</string>
    <string name="add_text_on_button">Add</string>
    <string name="fill_in_both_lines">Fill in both lines</string>
    <string name="add_set_button_text">Add set button</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="ok">OK</string>
    <string name="low_storage_error">Ocr dependencies cannot be downloaded due to low device storage</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="no_data_available">No set available</string>
    <string name="study_set">Study set</string>
    <string name="edit_set">Edit set</string>
    <string name="save">Save</string>
    <string name="backup">Backup</string>
    <string name="activate_bubble_add">Activate bubble add</string>
    <string name="channel_name">notification_channel</string>
    <string name="channel_description">it\'s time to study</string>
    <string name="set_study_reminder">Set study reminder</string>
    <string name="toggle_pinchzoom">Toggle PinchZoom</string>
    <string name="tap_speak_pinch_zoom">Tap to Speak. Pinch/Stretch to zoom</string>
    <string name="study_progress">Study progress</string>
    <string name="animate_x">Animate X</string>
    <string name="animate_y">Animate Y</string>
    <string name="animate_xy">Animate XY</string>
    <string name="sets">Sets</string>
    <string name="set_up_dialog">Set Up Dialog</string>
    <string name="saved">Saved</string>
    <string name="copied">Copied</string>
    <string name="pick_up_set">Pick up Set</string>
    <string name="undo">UNDO</string>
    <string name="is_deleted">is deleted</string>
    <string name="cancel">Cancel</string>
    <string name="new_set">New Set</string>
    <string name="auto_suggest">Auto-Suggest</string>
    <string name="result">Result</string>
    <string name="you_have">You have</string>
    <string name="right_answers_and">" right answers and"</string>
    <string name="wrong">wrong</string>
    <string name="need_5_words">You need at least 5 cards to start studying</string>
    <string name="draw_permission">Draw over other app permission not available. Closing the application</string>
    <string name="translate_bubble_on">Копирование включено</string>
    <string name="translate_bubble_off">Копирование выключено</string>
    <string name="no_set_available">No set available</string>
    <string name="state">state</string>
    <string-array name="available_translation_languages">
        <item>Russian</item>
        <item>English</item>
        <item>German</item>
        <item>French</item>
        <item>Czech</item>
    </string-array>
</resources>