<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/ic_study"
        android:icon="@drawable/ic_study"
        app:showAsAction="ifRoom"
        android:actionLayout="@layout/activity_set_create"
        android:title="@string/study_set">
    </item>
    <item
        android:id="@+id/ic_settings"
        android:icon="@drawable/ic_settings"
        app:showAsAction="ifRoom"
        android:actionLayout="@layout/activity_set_create"
        android:title="@string/edit_set">
    </item>
    <item
        android:id="@+id/check_icon"
        android:icon="@drawable/ic_check"
        app:showAsAction="ifRoom"
        android:actionLayout="@layout/activity_set_create"
        android:title="@string/save">
    </item>
</menu>