<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="18dp">

<EditText
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/edit_set_title"
    android:hint="@string/set_title_text"/>

    <AutoCompleteTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edit_language_input"
        android:hint="@string/language_input_text"
        android:layout_below="@+id/edit_set_title"
        android:completionThreshold="1"
        android:completionHint="Choose input language"/>

    <AutoCompleteTextView
        android:id="@+id/edit_language_output"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:completionHint="Choose output language"
        android:completionThreshold="1"
        android:layout_below="@+id/edit_language_input"
        android:hint="@string/language_output_text" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_language_output"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/checkbox"
            style="?android:attr/textAppearanceMedium"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_margin="5dp" />

        <TextView
            android:layout_margin="5dp"
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/auto_suggest" />
    </LinearLayout>




</RelativeLayout>